Actualizando la presentación

--- a/html/shortcodes.html
+++ b/html/shortcodes.html
@@ -40,24 +40,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item active" text-align="left">
               <a class="nav-link" href="index.html">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="trainings.html">TRAININGS</a>
+              <a class="nav-link" href="shortcodes.html">UNIVERSIDADES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="classes.html">CLASSES</a>
+              <a class="nav-link" href="classes.html">REPOSITORIOS</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="shows.html">SHOWS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="shortcodes.html">SHORTCODES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">CONTACT</a>
-            </li>
+          
           </ul>                                          
           <form class="form-inline my-2 my-lg-0">
             <div class="search_icon"><a href="#"><img src="images/search-icon.png"></a></div>
@@ -69,28 +61,32 @@
     <!-- shortcode section start -->
     <div class="shortcode_section layout_padding">
       <div class="container">
-        <h1 class="ballet_text">SHORTCODE</h1>
-        <p class="amet_text">amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore </p>
+        <h1 class="ballet_text">Repositorios elegidos</h1>
+        <p class="amet_text">Se logró encontrar y analizar 3 repositorios, uno de cada distinta universidad. </p>
         <div class="shortcode_section_2">
           <div class="shortcode_left">
-            <h1 class="heading_text">Heading 1</h1>
-            <p class="tempor_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamcoconsectetur adipiscing </p>
+            <td><font color="#D49E50"><b><li><a href= "RepositorioUnalm.html">REPOSITORIO UNALM</a></li></b></font></td>
+            <p class="tempor_text">La Universidad Nacional Agraria La Molina (UNALM) es una prestigiosa universidad peruana fundada en 1902. Actualmente cuenta con 8 facultades que brindan 12 carreras profesionales, entre las cuales sobresale Ingeniería Estadística Informática de la facultad de Economía y Planificación, que forma excelentes profesionales.
+              Su repositorio de tesis esta dividida por colecciones, entre estas una coleccion por cada facultad, una por la Escuela de Postgrado y otras de sus publicaciones científicas.</p>
           </div>
-          <div class="shortcode_right"><img src="images/img-3.png"></div>
+          <div class="shortcode_right"><img src="images/logo-unalm.png"></div>
         </div>
         <div class="shortcode_section_2">
-          <div class="shortcode_right"><img src="images/img-4.png"></div>
+          <div class="shortcode_right"><img src="images/logo-pucp.png"></div>
           <div class="shortcode_left border_left_0">
-            <h1 class="heading_text_1">Heading 2</h1>
-            <p class="tempor_text_1">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamcoconsectetur adipiscing </p>
+            <td><font color="#D49E50"><b><li><a href= "RepositorioPucp.html">REPOSITORIO PUCP</a></li></b></font></td>
+            <p class="tempor_text_1">La Pontificia Universidad Católica del Perú es primera universidad privada del país. Cuenta con 13 facultades y su carrera Estadística Informática se encuentra en Facultad de Ciencias e Ingeniería, donde forman a alumnos en las áreas de sistemas de información, ingeniería de software y tecnologías de la información.
+              La universidad se caracteriza por contribuir la investigación e innovación a nivel internacional, por lo que su repositorio de tesis es de gran valor para la comunidad.</p>
           </div>
         </div>
         <div class="shortcode_section_2">
           <div class="shortcode_left">
-            <h1 class="heading_text">Heading 3</h1>
-            <p class="tempor_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamcoconsectetur adipiscing </p>
+            <td><font color="#D49E50"><b><li><a href= "RepositorioUmh.html">REPOSITORIO UMH</a></li></b></font></td>
+            <p class="tempor_text">La Universidad Miguel Hernández, oficialmente Universidad de Miguel Hernández de Elche, ​ es una universidad pública española multicampus de la provincia de Alicante cuya sede principal está en Elche. Ofrece 28 grados entre los cuales se encuentra Estadística Empresarial que dota al graduado/a de la formación necesaria para el tratamiento y análisis de grandes bases de datos, el diagnóstico en la empresa y la orientación en la toma de decisiones.
+
+              Su repositorio digital RediIMH cuenta con tesis de másteres, doctorados y fin de grado abiertos al público en general. </p>
           </div>
-          <div class="shortcode_right"><img src="images/img-5.png"></div>
+          <div class="shortcode_right"><img src="images/logo-umh.jpg"></div>
         </div>
       </div>
     </div>
@@ -101,17 +97,17 @@
         <div class="row">
           <div class="col-sm-6 col-lg-4">
             <h1 class="adderss_text">Adderss</h1>
-            <div class="map_icon"><img src="images/map-icon.png"><span class="paddlin_left_0">London 145 United Kingdom</span></div>
-            <div class="map_icon_1"><img src="images/call-icon.png"><span class="paddlin_left_0">+7586656566<br>+9876543210</span></div>
-            <div class="map_icon"><img src="images/mail-icon.png"><span class="paddlin_left_0">volim@gmail.com</span></div>
+            <div class="map_icon"><img src="images/map-icon.png"><span class="paddlin_left_0"></span></div>
+            <div class="map_icon_1"><img src="images/call-icon.png"><span class="paddlin_left_0"></span></div>
+            <div class="map_icon"><img src="images/mail-icon.png"><span class="paddlin_left_0"></span></div>
           </div>
           <div class="col-sm-6 col-lg-4">
             <h1 class="adderss_text">Opeing time</h1>
-            <div class="hiphop_text_1">Hip Hop Dance :<span style="text-align: right; float: right;"> 07:00am - 1700</span></div>
-            <div class="hiphop_text_1">Ballet :        <span style="text-align: right; float: right;"> 09:00am - 1200</span></div>
-            <div class="hiphop_text_1">Break Dance :   <span style="text-align: right; float: right;"> 18:00am - 24:00</span></div>
-            <div class="hiphop_text_1">Salsa :         <span style="text-align: right; float: right;"> 18:00am - 1100</span></div>
-            <div class="hiphop_text_1">Tab Dancing :   <span style="text-align: right; float: right;"> 19:00am - 8 00</span></div>
+            <div class="hiphop_text_1"><span style="text-align: right; float: right;"></span></div>
+            <div class="hiphop_text_1"><span style="text-align: right; float: right;"></span></div>
+            <div class="hiphop_text_1"><span style="text-align: right; float: right;"></span></div>
+            <div class="hiphop_text_1"><span style="text-align: right; float: right;"></span></div>
+            <div class="hiphop_text_1"><span style="text-align: right; float: right;"></span></div>
           </div>
           <div class="col-sm-6 col-lg-4">
             <h1 class="adderss_text">Newsletter</h1>
